sfSandBoxCode/force-app/main/default/objects/Case_Timeliness__c/Case_Timeliness__c.object-meta.xml
<CustomObject>
    <label>Case Timelines</label>
    <nameField>
        <label>Case Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cases Timelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>