sfSandBoxCode/force-app/main/default/objects/Case_Timeliness__c/fields/Active_On_USSD__c.field-meta.xml
<CustomField>
    <fullName>Active_On_USSD__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active On USSD</label>
    <type>Checkbox</type>
</CustomField>