sfSandBoxCode/force-app/main/default/objects/Case_Timeliness__c/fields/Agreed_Upon_Time_For_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Upon_Time_For_Resolution__c</fullName>
    <inlineHelpText>Time in days</inlineHelpText>
    <label>Agreed Upon Time For Resolution(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>