sfSandBoxCode/force-app/main/default/objects/Case_Timeliness__c/fields/USSD_Case_Categories__c.field-meta.xml
<CustomField>
    <fullName>USSD_Case_Categories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USSD Case Categories</label>
    <referenceTo>Ussd_Cate_C__c</referenceTo>
    <relationshipLabel>Cases Timelines</relationshipLabel>
    <relationshipName>Cases_Timelines</relationshipName>
    <type>Lookup</type>
</CustomField>