sfSandBoxCode/force-app/main/default/objects/Case_Timeliness__c/fields/USSD_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>USSD_Category_Text__c</fullName>
    <formula>USSD_Case_Categories__r.category_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USSD Category Text</label>
    <type>Text</type>
</CustomField>