sfSandBoxCode/force-app/main/default/objects/Case_Timeliness__c/fields/USSD_TEXT__c.field-meta.xml
<CustomField>
    <fullName>USSD_TEXT__c</fullName>
    <label>USSD TEXT</label>
    <length>120</length>
    <type>Text</type>
</CustomField>