sfSandBoxCode/force-app/main/default/objects/Case_Timeliness__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Case_Category__c</columns>
    <columns>Priority_Level__c</columns>
    <columns>Agreed_Upon_Time_For_Resolution__c</columns>
    <columns>USSD_Case_Categories__c</columns>
    <columns>USSD_Category_Text__c</columns>
    <columns>Active_On_USSD__c</columns>
    <columns>USSD_TEXT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>